--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.7em;
+  line-height: 1.8em;
   background-color: #f4f7f4;
   color: #222;
   display: flex;
@@ -19,7 +19,6 @@ main,
 article,
 section,
 aside,
-nav,
 figure,
 details,
 dialog {
@@ -31,18 +30,30 @@ main > article > section > ol {
 }
 
 body > header {
+  position: sticky;
+  top: -1px;
   display: flex;
   background-color: #2f5d3a;
   color: white;
   width: 100vw;
   padding: 2em 0em;
-  align-items: center;
+  align-items: end;
   justify-content: space-around;
   line-height: 3em;
 }
 
 body > header > hgroup, body > header > nav{
   padding-left: 1em;
+}
+
+body > header > hgroup > h1 {
+  font-weight: 300;
+  font-size: 2.5em;
+}
+
+body > header > hgroup > h2 {
+  font-weight: 200;
+  font-size: 1.5em;
 }
 
 header > nav > ul {
@@ -57,7 +68,7 @@ nav > ul {
 nav a {
   color: white;
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 400;
 }
 
 nav a:hover {
