using serif for heading

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ body>header>hgroup>h1 {
   font-weight: 300;
   font-size: 2.5em;
   font-family: serif;
+  letter-spacing: 2px;
 }
 
 body>header>hgroup>h2 {
